--- a/about.html
+++ b/about.html
@@ -34,21 +34,27 @@
     <link rel="stylesheet" href="styling/styles.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="about-section container">
       <div class="row">
         <div class="col-lg-6">
-          <h1>Hi I am Patricia Pereira</h1>
-          <h2>Frontend Developer, based in Portugal.</h2>
-          <p>
-            For anyone who wants to start learning code, this workshop is very
-            interesting. You will be challenged with different exercises, and
-            everything is well explained, homework and deadlines are good for
-            keep focus
-          </p>
-          <a href="#"> See my projects </a>
+          <div class="about-section-content">
+            <h1 class="mb-4">Hi, I am Chinaza Ike</h1>
+            <h2 class="mb-4">Frontend Developer, based in Nigeria.</h2>
+            <p class="mb-5">
+              For anyone who wants to start learning code, this workshop is very
+              interesting. You will be challenged with different exercises, and
+              everything is well explained, homework and deadlines are good for
+              keep focus
+            </p>
+            <a href="#" class="btn about-projects-btn"> See my projects </a>
+          </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/chinaza's-portrait.png" alt="" width="400px" />
+          <img
+            src="images/chinaza's-portrait.png"
+            alt=""
+            class="img-fluid chinazas-portrait"
+          />
         </div>
       </div>
     </div>
