--- a/about.html
+++ b/about.html
@@ -34,10 +34,10 @@
     <link rel="stylesheet" href="styling/styles.css" />
   </head>
   <body>
-    <div class="about-section container">
+    <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-section-content">
+          <div class="content">
             <h1 class="mb-4">Hi, I am Chinaza Ike</h1>
             <h2 class="mb-4">Frontend Developer, based in Nigeria.</h2>
             <p class="mb-5">
