--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
     <link rel="stylesheet" href="styling/styles.css" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img
+          src="images/shecodes-logo.png"
+          alt=""
+          class="d-none d-lg-block d-md-block"
+        />
+        <img
+          src="images/shecodes-logo-small.jpg"
+          alt=""
+          class="d-block d-md-none"
+        />
+        <ul>
+          <li class="active"><a href="/index.html">Home</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/work.html">Work</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="hero">
       <p>👋 Hello, I'm</p>
       <h1>Chinaza Ike</h1>
