--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <img
-          src="images/shecodes-logo.png"
-          alt=""
-          class="d-none d-lg-block d-md-block"
-        />
-        <img
-          src="images/shecodes-logo-small.jpg"
-          alt=""
-          class="d-block d-md-none"
-        />
+        <a href="/index.html">
+          <img
+            src="images/shecodes-logo.png"
+            alt=""
+            class="d-none d-lg-block d-md-block"
+          />
+          <img
+            src="images/shecodes-logo-small.jpg"
+            alt=""
+            class="d-block d-md-none"
+          />
+        </a>
         <ul>
           <li class="active"><a href="/index.html">Home</a></li>
           <li><a href="/about.html">About</a></li>
