Added a link to the social media icons in the footer

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="">
+          <a href="https://github.com/Chinazaekpere-Ike" target="_blank">
             <i class="fa-brands fa-github"></i>
           </a>
-          <a href="">
+          <a href="https://www.instragram.com/marilynpowers_" target="_blank">
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="">
+          <a href="https://www.twitter.com/bergamont19" target="_blank">
             <i class="fa-brands fa-twitter"></i>
           </a>
         </div>
