--- a/about.html
+++ b/about.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <title>About - Chinaza Ike</title>
+    <meta
+      name="description"
+      content="About Chinaza Ike. Completed Projects and Life Accomplishments"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -34,6 +39,34 @@
     <link rel="stylesheet" href="styling/styles.css" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/index.html">
+          <img
+            src="images/shecodes-logo.png"
+            alt="Chinaza's logo"
+            class="d-none d-lg-block d-md-block"
+            title="Homepage"
+          />
+          <img
+            src="images/shecodes-logo-small.jpg"
+            alt=""
+            class="d-block d-md-none"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/index.html" title="Homepage">Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html" title="About Chinaza">About</a>
+          </li>
+          <li><a href="/work.html" title="Works of Chinaza">Work</a></li>
+          <li><a href="/contact.html" title="Contact Chinaza">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
@@ -46,17 +79,84 @@
               everything is well explained, homework and deadlines are good for
               keep focus
             </p>
-            <a href="#" class="btn about-projects-btn"> See my projects </a>
+            <a
+              href="/work.html"
+              class="btn about-projects-btn"
+              title="See Chinaza's Projects"
+            >
+              See my projects
+            </a>
           </div>
         </div>
         <div class="col-lg-6">
           <img
             src="images/chinaza's-portrait.png"
-            alt=""
+            alt="Chinaza's Portrait"
             class="img-fluid chinazas-portrait"
           />
         </div>
       </div>
     </div>
+
+    <footer>
+      <div
+        class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h4>Work Inquiry</h4>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding-redirect mt-3"
+            title="Contact Chinaza"
+          >
+            Contact me
+          </a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:marylynike@gmail.com"
+          class="email-link"
+          title="Email Chinaza"
+        >
+          marylynike@gmail.com
+        </a>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://github.com/Chinazaekpere-Ike"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a
+          href="https://www.instragram.com/marilynpowers_"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a
+          href="https://www.twitter.com/bergamont19"
+          target="_blank"
+          title="Twitter Profile"
+        >
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+      </div>
+      <p class="mt-5 text-center text-muted">
+        ✌️ This website was coded by Chinaza Ike, and is
+        <a
+          href="https://github.com/Chinazaekpere-Ike/Portfolio-Project"
+          target="_blank"
+          title="Website Repository on Github"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
