--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <title>Contact Chinaza Ike</title>
+    <meta
+      name="description"
+      content="Contact Information of Chinaza Ike. Social media profiles (Instagram, Twitter), Email, Github Profile"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -34,29 +39,128 @@
     <link rel="stylesheet" href="styling/styles.css" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/index.html">
+          <img
+            src="images/shecodes-logo.png"
+            alt="Chinaza's logo"
+            class="d-none d-lg-block d-md-block"
+            title="Homepage"
+          />
+          <img
+            src="images/shecodes-logo-small.jpg"
+            alt=""
+            class="d-block d-md-none"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/index.html" title="Homepage">Home</a>
+          </li>
+          <li><a href="/about.html" title="About Chinaza">About</a></li>
+          <li><a href="/work.html" title="Works of Chinaza">Work</a></li>
+          <li class="active">
+            <a href="/contact.html" title="Contact Chinaza">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
 
         <h3>Email</h3>
         <p>
-          <a href="mailto:marylynike@gmail.com"> marylynike@gmail.com </a>
+          <a href="mailto:marylynike@gmail.com" title="Email Chinaza">
+            marylynike@gmail.com
+          </a>
         </p>
 
         <h3>Twitter</h3>
         <p>
-          <a href="https://www.twitter.com/bergamont19" target="_blank">
+          <a
+            href="https://www.twitter.com/bergamont19"
+            target="_blank"
+            title="Find Chinaza on Twitter"
+          >
             @bergamont
           </a>
         </p>
 
         <h3>Instagram</h3>
         <p>
-          <a href="https://www.instagram/marilynpowers_.com/" target="_blank">
+          <a
+            href="https://www.instagram/marilynpowers_.com/"
+            target="_blank"
+            title="Find Chinaza on Instagram"
+          >
             @marilynpowers_
           </a>
         </p>
       </div>
     </div>
+
+    <footer>
+      <div
+        class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h4>Work Inquiry</h4>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding-redirect mt-3"
+            title="Contact Chinaza"
+          >
+            Contact me
+          </a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:marylynike@gmail.com"
+          class="email-link"
+          title="Email Chinaza"
+        >
+          marylynike@gmail.com
+        </a>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://github.com/Chinazaekpere-Ike"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a
+          href="https://www.instragram.com/marilynpowers_"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a
+          href="https://www.twitter.com/bergamont19"
+          target="_blank"
+          title="Twitter Profile"
+        >
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+      </div>
+      <p class="mt-5 text-center text-muted">
+        ✌️ This website was coded by Chinaza Ike, and is
+        <a
+          href="https://github.com/Chinazaekpere-Ike/Portfolio-Project"
+          target="_blank"
+          title="Website Repository on Github"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
