--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <title>Front-end Developer - Chinaza Ike</title>
+    <meta
+      name="description"
+      content="Chinaza is a Front-end Developer based in Nigeria. She is also a SheCodes Alumini as well as a past intern at reputable companies"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -39,20 +44,23 @@
         <a href="/index.html">
           <img
             src="images/shecodes-logo.png"
-            alt=""
+            alt="Chinaza's logo"
             class="d-none d-lg-block d-md-block"
+            title="Homepage"
           />
           <img
             src="images/shecodes-logo-small.jpg"
-            alt=""
+            alt="Chinaza's logo"
             class="d-block d-md-none"
           />
         </a>
         <ul>
-          <li class="active"><a href="/index.html">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/work.html">Work</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li class="active">
+            <a href="/index.html" title="Homepage">Home</a>
+          </li>
+          <li><a href="/about.html" title="About Chinaza">About</a></li>
+          <li><a href="/work.html" title="Works of Chinaza">Work</a></li>
+          <li><a href="/contact.html" title="Contact Chinaza">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -61,7 +69,9 @@
       <p>👋 Hello, I'm</p>
       <h1>Chinaza Ike</h1>
       <h2>Front-end developer based in Nigeria</h2>
-      <a href="#" class="btn btn-branding">Contact me</a>
+      <a href="/contact.html" class="btn btn-branding" title="Contact Chinaza"
+        >Contact me</a
+      >
     </div>
     <p class="opening-paragraph text-center m-5">
       Featured Project which my best projects be choice to show
@@ -69,7 +79,12 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" width="560px" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid"
+            width="560px"
+            alt="Yogurt Project"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -80,7 +95,13 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-redirect"> Learn more </a>
+            <a
+              href="/work.html"
+              class="btn btn-branding-redirect"
+              title="Go to Yogurt Project"
+            >
+              Learn more
+            </a>
           </div>
         </div>
       </div>
@@ -95,17 +116,33 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-redirect"> Learn more </a>
+            <a
+              href="/work.html"
+              class="btn btn-branding-redirect"
+              title="Go to Weather App"
+            >
+              Learn more
+            </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather-app.png" class="img-fluid" width="560px" />
+          <img
+            src="images/weather-app.png"
+            class="img-fluid"
+            width="560px"
+            alt="Weather App Project"
+          />
         </div>
       </div>
 
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" width="560px" />
+          <img
+            src="images/dictionary.png"
+            class="img-fluid"
+            width="560px"
+            alt="Dictionary App Project"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -116,7 +153,13 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-redirect"> Learn more </a>
+            <a
+              href="/work.html"
+              class="btn btn-branding-redirect"
+              title="Go to Dictionary App"
+            >
+              Learn more
+            </a>
           </div>
         </div>
       </div>
@@ -130,25 +173,56 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="#" class="btn btn-branding-redirect mt-3"> Contact me </a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding-redirect mt-3"
+              title="Contact Chinaza"
+            >
+              Contact me
+            </a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:marylynike@gmail.com" class="email-link">
+          <a
+            href="mailto:marylynike@gmail.com"
+            class="email-link"
+            title="Email Chinaza"
+          >
             marylynike@gmail.com
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://github.com/Chinazaekpere-Ike" target="_blank">
+          <a
+            href="https://github.com/Chinazaekpere-Ike"
+            target="_blank"
+            title="Github Profile"
+          >
             <i class="fa-brands fa-github"></i>
           </a>
-          <a href="https://www.instragram.com/marilynpowers_" target="_blank">
+          <a
+            href="https://www.instragram.com/marilynpowers_"
+            target="_blank"
+            title="Instagram Profile"
+          >
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="https://www.twitter.com/bergamont19" target="_blank">
+          <a
+            href="https://www.twitter.com/bergamont19"
+            target="_blank"
+            title="Twitter Profile"
+          >
             <i class="fa-brands fa-twitter"></i>
           </a>
         </div>
+        <p class="mt-5 text-center text-muted">
+          ✌️ This website was coded by Chinaza Ike, and is
+          <a
+            href="https://github.com/Chinazaekpere-Ike/Portfolio-Project"
+            target="_blank"
+            title="Website Repository on Github"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
