--- a/work.html
+++ b/work.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <title>Works of Chinaza Ike</title>
+    <meta name="description" content="Finished works of Chinaza Ike" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -34,6 +36,34 @@
     <link rel="stylesheet" href="styling/styles.css" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/index.html">
+          <img
+            src="images/shecodes-logo.png"
+            alt="Chinaza's logo"
+            class="d-none d-lg-block d-md-block"
+            title="Homepage"
+          />
+          <img
+            src="images/shecodes-logo-small.jpg"
+            alt=""
+            class="d-block d-md-none"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/index.html" title="Homepage">Home</a>
+          </li>
+          <li><a href="/about.html" title="About Chinaza">About</a></li>
+          <li class="active">
+            <a href="/work.html" title="Works of Chinaza">Work</a>
+          </li>
+          <li><a href="/contact.html" title="Contact Chinaza">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
@@ -41,7 +71,7 @@
           <div class="col-md-6 mb-4">
             <img
               src="images/yogurt.png"
-              alt=""
+              alt="Yogurt Project"
               class="img-fluid mb-3 rounded-4"
             />
             <h3 class="text-center mb-0">Yogurt Project</h3>
@@ -51,7 +81,7 @@
           <div class="col-md-6 mb-4">
             <img
               src="images/weather-app.png"
-              alt=""
+              alt="Weather App Project"
               class="img-fluid mb-3 rounded-4"
             />
             <h3 class="text-center mb-0">Weather App</h3>
@@ -63,7 +93,7 @@
           <div class="col-md-6 mb-4">
             <img
               src="images/dictionary.png"
-              alt=""
+              alt="Dictionary App Project"
               class="img-fluid mb-3 rounded-4"
             />
             <h3 class="text-center mb-0">Dictionary App</h3>
@@ -75,7 +105,7 @@
           <div class="col-md-6 mb-4">
             <img
               src="images/translation-app.png"
-              alt=""
+              alt="Translation App Project"
               class="img-fluid mb-3 rounded-4"
             />
             <h3 class="text-center mb-0">Translation App</h3>
@@ -86,5 +116,66 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <div
+        class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h4>Work Inquiry</h4>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding-redirect mt-3"
+            title="Contact Chinaza"
+          >
+            Contact me
+          </a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:marylynike@gmail.com"
+          class="email-link"
+          title="Email Chinaza"
+        >
+          marylynike@gmail.com
+        </a>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://github.com/Chinazaekpere-Ike"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a
+          href="https://www.instragram.com/marilynpowers_"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a
+          href="https://www.twitter.com/bergamont19"
+          target="_blank"
+          title="Twitter Profile"
+        >
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+      </div>
+      <p class="mt-5 text-center text-muted">
+        ✌️ This website was coded by Chinaza Ike, and is
+        <a
+          href="https://github.com/Chinazaekpere-Ike/Portfolio-Project"
+          target="_blank"
+          title="Website Repository on Github"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
