Corrected a few typos

--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
         <a
           href="https://github.com/Chinazaekpere-Ike/Portfolio-Project"
           target="_blank"
-          title="Website Repository on Github"
+          title="Github Repository"
           >open-sourced</a
         >
       </p>
