--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
         <a
           href="https://github.com/Chinazaekpere-Ike/Portfolio-Project"
           target="_blank"
-          title="Website Repository on Github"
+          title="Github Repository"
           >open-sourced</a
         >
       </p>
